--- a/backend/src/main/webapp/app/views/dym_list/list_det.html
+++ b/backend/src/main/webapp/app/views/dym_list/list_det.html
@@ -9,10 +9,37 @@
 .checkbox label span {
 	margin-left: 0;
 }
+.selected {
+	background-color: #C7E2F0 !important;
+}
+.selected td:nth-child(1) {
+	width: 1000px !important;
+}
+.selected td:nth-child(2) {
+	width: 20% !important;
+}
+.selected td:nth-child(3) {
+	width: 30% !important;
+}
+.selected td:nth-child(4) {
+	width: 10% !important;
+}
+.selected td:nth-child(5) {
+	width: 10% !important;
+}
+.selected td:nth-child(6) {
+	width: 10% !important;
+}
+.selected td:nth-child(7) {
+	width: 10% !important;
+}
+.highlight {
+    background-color: #C7E2F0 !important;
+}
 </style>
 
 <div class="table-responsive">
-	<table class="table table-striped table-hover">
+	<table id="tbSortable" class="table table-striped table-hover">
 		<thead>
 			<tr style="color: #337AB7;">
 				<th style="width: 10%;">ตัวย่อ</th>
@@ -27,7 +54,7 @@
 		<thead>
 		<tbody>
 		<tr ng-repeat="item in itemDets" style="color: #337AB7;">
-			<td style="vertical-align: middle;"><span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span></td>
+			<td style="vertical-align: middle;" id="{{ item.id }}"><span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span></td>
 			<td style="vertical-align: middle;"><span editable-text="item.desc" e-name="desc" e-form="rowform">{{ item.desc }}</span></td>
 			<td style="vertical-align: middle;"><span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span></td>
 			<!-- <td style="vertical-align: middle;">
