--- a/backend/src/main/webapp/app/views/fields_setting/list.html
+++ b/backend/src/main/webapp/app/views/fields_setting/list.html
@@ -2,23 +2,43 @@
 .editable-wrap {
     width: 100%;
 }
+.selected {
+	background-color: #C7E2F0 !important;
+}
+.selected td:nth-child(1) {
+	width: 1000px !important;
+}
+.selected td:nth-child(2) {
+	width: 26% !important;
+}
+.selected td:nth-child(3) {
+	width: 14% !important;
+}
+.selected td:nth-child(4) {
+	width: 10% !important;
+}
+.highlight {
+    background-color: #C7E2F0 !important;
+}
 </style>
 
 <div ui-view>
 	<div class="table-responsive">
-		<table class="table table-striped table-hover">
+		<table id="tbSortable" class="table table-striped table-hover">
 			<thead>
 				<tr style="color: #337AB7;">
-					<th style="width: 47%;">Name</th>
-					<th style="width: 29%;">Field Name</th>
+					<th style="width: 50%;">Name</th>
+					<th style="width: 26%;">Alias</th>
+					<!-- <th style="width: 5%;">Order</th> -->
 					<th style="width: 14%;">Status</th>
 					<th style="width: 10%;"></th>
 				</tr>
 			<thead>
 			<tbody>
 				<tr ng-repeat="item in items" style="color: #337AB7;">
-					<td style="vertical-align: middle;"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
-					<td style="vertical-align: middle;"><span editable-text="item.fieldName" e-name="fieldName" e-form="rowform">{{ item.fieldName }}</span></td>
+					<td style="vertical-align: middle;" id="{{ item.id }}"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
+					<td style="vertical-align: middle;"><span editable-text="item.alias" e-name="alias" e-form="rowform">{{ item.alias }}</span></td>
+					<!-- <td style="vertical-align: middle;" id="{{ item.id }}"><span editable-text="item.order" e-name="order" e-form="rowform">{{ item.order }}</span></td> -->
 					
 					<td style="vertical-align: middle;">
 						<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
@@ -47,4 +67,5 @@
 			<i class="fa fa-plus-square"></i>
 		</button>
 	</div>
+	
 </div>
