--- a/backend/src/main/webapp/app/views/fields_setting/main.html
+++ b/backend/src/main/webapp/app/views/fields_setting/main.html
@@ -9,11 +9,8 @@
         <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                	<i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
-                    <button type="button" class="btn btn-info btn-circle btn-lg" ng-show="isShowBack"
-                    		style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
-                    	<i class="fa" ng-class="iconBtn"></i>
-                    </button>
+                	<i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }} {{ subTitle }}
+                    <span ui-view="backBtn"></span>
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 	<div class="row">
