--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -160,7 +160,7 @@ tr.comm-row-strikeout td:before {
 
 .img-thumbnail {
 	padding: 1px !important;
-	border-color: #337ab7 !important;
+	border-color: #5f92c1 !important;
 }
 
 /* ----------: Override bootstrap css :---------- */
