--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -161,6 +161,7 @@ tr.comm-row-strikeout td:before {
 .img-thumbnail {
 	padding: 1px !important;
 	border-color: #5f92c1 !important;
+	background-color: #b6d2e1;
 }
 
 /* ----------: Override bootstrap css :---------- */
