--- a/backend/src/main/webapp/app/views/fields_setting/list.html
+++ b/backend/src/main/webapp/app/views/fields_setting/list.html
@@ -9,12 +9,15 @@
 	width: 1000px !important;
 }
 .selected td:nth-child(2) {
-	width: 26% !important;
+	width: 20% !important;
 }
 .selected td:nth-child(3) {
-	width: 14% !important;
+	width: 15% !important;
 }
 .selected td:nth-child(4) {
+	width: 10% !important;
+}
+.selected td:nth-child(5) {
 	width: 10% !important;
 }
 .highlight {
@@ -27,9 +30,10 @@
 		<table id="tbSortable" class="table table-striped table-hover">
 			<thead>
 				<tr style="color: #337AB7;">
-					<th style="width: 50%;">Name</th>
-					<th style="width: 26%;">Alias</th>
-					<th style="width: 14%;">Status</th>
+					<th style="width: 45%;">Name</th>
+					<th style="width: 20%;">Alias</th>
+					<th style="width: 15%;">Function</th>
+					<th style="width: 10%;">Status</th>
 					<th style="width: 10%;"></th>
 				</tr>
 			<thead>
@@ -37,6 +41,23 @@
 				<tr ng-repeat="item in items" style="color: #337AB7;">
 					<td style="vertical-align: middle;" id="{{ item.id }}"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
 					<td style="vertical-align: middle;"><span editable-text="item.alias" e-name="alias" e-form="rowform">{{ item.alias }}</span></td>
+					<!-- <td style="vertical-align: middle;"><span editable-text="item.functionName" e-name="functionName" e-form="rowform">{{ item.functionName }}</span></td> -->
+					<td style="vertical-align: middle;">
+						<!-- <span editable-text="item.functionName" e-name="functionName" e-form="rowform">{{ item.functionName }}</span> -->
+						
+						
+						
+						
+						<span editable-select="item.functionName" e-name="functionName" e-form="rowform" e-ng-options="s.value as s.text for s in functions">
+					    	{{ item.functionName }}
+					  	</span>
+						
+						
+						
+					</td>
+					
+					
+					
 					<td style="vertical-align: middle;">
 						<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
 							<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i> 
