--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -170,6 +170,17 @@
 	<div class="col-xs-12">
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
 		  <button type="button" ng-disabled="taskDetail[0].isSuspend" class="btn btn-sm btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
+		  
+		  <div class="btn-group" ng-if="other.fieldList.length > 0">
+		  	<button type="button" class="btn btn-sm btn-primary btn-outline dropdown-toggle" data-toggle="dropdown" ng-class="{'active': other.isOtherActive}">
+		  		อื่นๆ <span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu" style="font-size: 12px; z-index: 100;">
+				<li ng-repeat="smenu in other.fieldList" ng-click="other.otherTab(smenu);">
+					<a href=""><i class="fa fa-sort-desc fa-rotate-270"></i>&nbsp;&nbsp;&nbsp;{{ smenu.name }}</a>
+				</li>
+			</ul>
+		  </div>
 		</div>
 		
 		&nbsp;&nbsp;&nbsp;
@@ -192,13 +203,23 @@
 		
 			<!-- &nbsp;&nbsp;&nbsp; -->
 		  	<button type="button" class="btn btn-sm btn-primary" title="{{ isOutOfWorkingTime ? 'นอกเวลาทำงาน' : 'บันทึกผลการติดตาม' }}"
-		  		    style="padding: 5px 15px 5px 15px;" ng-click="askModal()" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0) || askModalObj.isOldTrace || lastTabActionMenuActive.id != 1 || taskDetail[0].isSuspend">
+		  		    style="padding: 5px 15px 5px 15px;" ng-click="askModal()" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0) || askModalObj.isOldTrace || lastTabActionMenuActive.id != 1 || taskDetail[0].isSuspend || other.isOtherActive">
 				<i class="fa fa fa-plus fa-1x"></i>
 			</button>
 		</div>
 		
 	</div>
-	<div class="col-xs-12" style="min-height: 315px;" ng-include="taskDetail[0].isSuspend ? emptyHtml : lastTabActionMenuActive.url"></div>
+	<div class="col-xs-12" style="min-height: 315px;" ng-hide="other.isOtherActive" ng-include="taskDetail[0].isSuspend ? emptyHtml : lastTabActionMenuActive.url"></div>
+	<div class="col-xs-12" style="min-height: 315px;" ng-show="other.isOtherActive">
+		<div class="panel panel-info" style="margin: 0;">
+			<div class="alert alert-info form-group input-group" style="position: relative; padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+				อื่นๆ&nbsp;<i class="fa fa-sort-desc fa-rotate-270"></i>&nbsp;&nbsp;&nbsp;{{ other.lastTabActionMenuActive.name }}&nbsp;&nbsp;&nbsp;
+				<i class="fa fa-sort-desc fa-rotate-90"></i>&nbsp;
+				<i class="fa fa-plus-circle fa-lg" title="เพิ่ม" style="cursor: pointer; color: #d7a54e;"></i>
+			</div>
+			<div class="panel panel-info" style="margin: 3px;" ui-view></div>
+		</div>
+	</div>
 </div>
 
 
