--- a/backend/src/main/webapp/app/views/product/advanced.html
+++ b/backend/src/main/webapp/app/views/product/advanced.html
@@ -72,6 +72,19 @@
 				</div>
 			</div>
 		</div>
+		<div class="form-horizontal">
+			<div class="form-group" style="margin-bottom: 0;">
+				<small class="col-xs-4 control-label" style="padding-right: 0;">Hide</small>
+				<div class="col-xs-8" style="padding-left: 10px;">
+					<div class="checkbox_animate" style="margin-top: 5px;">
+						<label style="cursor: pointer;">
+			            	<input type="checkbox" ng-model="advanced.isHide" ng-click="updateField('isHide')">
+			            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+			          	</label>
+			        </div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="col-xs-6">
 		<div class="form-horizontal">
