--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -100,7 +100,7 @@
 				<div class="col-xs-5" 
 					 style="padding: 5px 5px 0 0; text-align: right; margin: 0; min-height: 42px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word; cursor: pointer;"
 					 ng-click="showMore(f, detail)">
-					<span>{{ f.columnNameAlias || f.columnName }}</span>
+					<span ng-hide="f.isHide">{{ f.columnNameAlias || f.columnName }}</span>
 				</div>
 				<!-- <div class="col-xs-7" style="padding: 1px 0 0 0; border-top: 1px solid #234E7C;"
 					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName], f.noticeForms, detail[f.noticeCusColName]) : ''"> -->
@@ -215,7 +215,7 @@
 			<div class="alert alert-info form-group input-group" style="position: relative; padding-top: 3px; padding-bottom: 3px; margin: 3px;">
 				อื่นๆ&nbsp;<i class="fa fa-sort-desc fa-rotate-270"></i>&nbsp;&nbsp;&nbsp;{{ other.lastTabActionMenuActive.name }}&nbsp;&nbsp;&nbsp;
 				<i class="fa fa-sort-desc fa-rotate-90"></i>&nbsp;
-				<i class="fa fa-plus-circle fa-lg" title="เพิ่ม" style="cursor: pointer; color: #d7a54e;"></i>
+				<i class="fa fa-plus-circle fa-lg" title="เพิ่ม" style="cursor: pointer; color: #d7a54e;" ng-click="addPopup()"></i>
 			</div>
 			<div class="panel panel-info" style="margin: 3px;" ui-view></div>
 		</div>
