--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -316,7 +316,7 @@
 														<select style="height: 30px; width: 25px;" name="dymList_{{ $index }}" class="input-group-addon" ng-model="list.groupSelected" ng-options="option as option.name for option in list.dymListDetGroup" ng-change="changeGroup(list)"></select>
 											  		</div>
 													<span class="input-group-addon" ng-show="list.dymListDetGroup.length == 0"><i class="fa fa-sticky-note"></i></span>
-													<select name="dymList_{{ $index }}" class="form-control" ng-model="list.dymListVal" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in list.dymListDet | orderBy:'order'" ng-change="askModalObj.selectedChange(list)">
+													<select name="dymList_{{ $index }}" class="form-control" ng-model="list.dymListVal" ng-options="option._id as (option.code ?  option.code + ' : ' + option.meaning : option.meaning) for option in list.dymListDet | orderBy:'order'" ng-change="askModalObj.selectedChange(list)">
 														<option value="">--Select--</option>
 											  		</select>
 										  		</div>
