--- a/backend/src/main/webapp/app/views/lps/main.html
+++ b/backend/src/main/webapp/app/views/lps/main.html
@@ -115,14 +115,19 @@ ul#keys-freebie>li>span {
 	box-shadow: 0px 3px 0px -2px rgba(255, 255, 255, 1), 0px 2px 0px 0px
 		rgba(169, 169, 169, 1);
 }
+.disable-dbl-tap-zoom {
+  touch-action: manipulation;
+}
 </style>
-<div id="wrapper" class="noncopy" style="margin-bottom: 15px;">
+<div id="wrapper" class="noncopy disable-dbl-tap-zoom" style="margin-bottom: 15px;">
 
-	<div id="page-wrapper" style="min-height: 100px; margin-top: 10px; padding-top: 10px; padding-bottom: 10px;">
+	<div id="page-wrapper" class="disable-dbl-tap-zoom" style="min-height: 100px; margin-top: 10px; padding-top: 10px; padding-bottom: 10px;">
 		<!-- <div ui-view></div> -->
-			
-		<div style="border: 1px solid #858080; width: 330px; margin: auto; padding: 10px;">
-			<div style="text-align: center; height: 50px; line-height: 50px;">
+		<div class="disable-dbl-tap-zoom" style="border: 1px solid #858080; width: 330px; margin: auto; padding: 10px; background-color: #337ab7; color: white; text-align: center;">
+			<label>{{ companyName }}</label>
+		</div>	
+		<div class="disable-dbl-tap-zoom" style="border: 1px solid #858080; width: 330px; margin: auto; padding: 10px;">
+			<div class="disable-dbl-tap-zoom" style="text-align: center; height: 50px; line-height: 50px;">
 				<div class="display-box" style="background-color: #a4a0a0;">
 					<span style="width: 121px; display: inline-block; border: 1px solid #858080; cursor: pointer;
 						text-align: center; height: 47px; background-color: #B6D2E1; float: left;"
