--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -46,7 +46,7 @@
 								  	<select name="column" class="form-control input-sm" ng-disabled="!isAllUser" ng-model="formData.userId" ng-options="option.id as option.showname for option in users" ng-change="changeUser()">
 										<option value="">{{ allUserNoSelect }}</option>
 							  		</select>
-							  		<span class="input-group-addon" ng-show="group1">
+							  		<span class="input-group-addon" ng-show="group1_1">
 							        	<input type="checkbox" ng-model="isAllUser" title="ผู้ใช้อื่น" ng-change="checkAllUser()">
 							      	</span>
 								</div>
