--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -141,13 +141,13 @@
 	            <input type="radio" name="dsf" value="0" ng-checked="data.dsf == 0" ng-model="data.dsf">No
 	        </label>
        </div>
-       <!-- <div class="form-group" ng-show="group0">
-	        <label>Receipt &nbsp;&nbsp;</label>
+       <!-- <div class="form-group">
+	        <label>LPS Active &nbsp;&nbsp;</label>
 	        <label class="radio-inline">
-	            <input type="radio" name="receipt" value="1" ng-checked="data.receipt.isReceipt == 1" ng-model="data.receipt.isReceipt">Yes
+	            <input type="radio" name="lps" value="1" ng-checked="data.lps == 1" ng-model="data.lps">Yes
 	        </label>
 	        <label class="radio-inline">
-	            <input type="radio" name="receipt" value="0" ng-checked="data.receipt.isReceipt == 0" ng-model="data.receipt.isReceipt">No
+	            <input type="radio" name="lps" value="0" ng-checked="data.lps == 0" ng-model="data.lps">No
 	        </label>
        </div> -->
 	</div>
@@ -233,16 +233,6 @@
 				</button>
 			  </div>
 		</div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
 		<div class="panel panel-default">
 			  <div class="panel-heading">
 			      <input type="checkbox" ng-model="data.receipt.isReceipt" />&nbsp;Receipt
@@ -253,6 +243,28 @@
 			  			<div class="form-group input-group" style="margin-bottom: 3px;">
 							<span class="input-group-addon">Format</span>
 							<input type="text" class="form-control input-sm" ng-model="data.receipt.format">					
+						</div>
+				  	</div>
+		  		</div>
+			  </div>
+		</div>
+		
+		
+		
+		
+		
+		
+		
+		<div class="panel panel-default">
+			  <div class="panel-heading">
+			      <input type="checkbox" ng-model="data.lps.isLps" />&nbsp;LPS Function
+			  </div>
+			  <div class="panel-body">
+		  		<div class="form-group" style="margin-bottom: 0;">
+				  	<div class="well" style="margin-bottom: 5px; padding-top: 9px; padding-bottom: 5px;">
+			  			<div class="form-group input-group" style="margin-bottom: 3px;">
+							<span class="input-group-addon">Field Mapping</span>
+							<input type="text" class="form-control input-sm" ng-model="data.lps.mapping">					
 						</div>
 				  	</div>
 		  		</div>
