--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -1,6 +1,6 @@
 
 <div class="panel panel-info" style="margin: 0;">
-	<div class="panel-heading">
+	<div class="panel-heading" ng-if="workingOnProduct.id == null">
 		<form class="form-inline" ng-submit="search()">
 			<div class="form-group input-group">
 				<span class="input-group-addon"><i class="fa fa-search"></i></span> 
@@ -60,16 +60,16 @@
 				<td>{{ u.createdDateTime | date : gb_dateTimeFormat }}</td>
 				<td>
 					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-show="group0">&emsp;</i>
-					<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)" ng-hide="group5">&emsp;</i>
-					<i class="fa fa-clock-o fa-lg user-action-icon-primary" title="ตั้งค่าเวลาทำงาน" ng-click="workingTimeSetting(u.id)" ng-hide="group5">&emsp;</i>
+					<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)">&emsp;</i>
+					<i class="fa fa-clock-o fa-lg user-action-icon-primary" title="ตั้งค่าเวลาทำงาน" ng-click="workingTimeSetting(u.id)">&emsp;</i>
 					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Account List" ng-show="group0" ng-click="importTaskSetting(u.id, u.productName)">&emsp;</i>
 					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Payment" ng-show="group0" ng-click="importPaymentSetting(u.id, u.productName)">&emsp;</i>
 					<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-show="group0">&emsp;</i>
-			        <input type="checkbox" title="ควบคุมการปริ้น Notice" ng-model="u.productSetting.isDisableNoticePrint" ng-change="productSetting(u, 1)" ng-show="group1">&emsp;
-			        <input type="checkbox" title="ปิด comment หน้างาน" ng-model="u.productSetting.isHideComment" ng-change="productSetting(u, 2)" ng-show="group1">&emsp;
-			        <input type="checkbox" title="ปิด Dashboard" ng-model="u.productSetting.isHideDashboard" ng-change="productSetting(u, 3)" ng-show="group1">&emsp;
-			        <input type="checkbox" title="ปิดระบบแจ้งเตือน" ng-model="u.productSetting.isHideAlert" ng-change="productSetting(u, 4)" ng-show="group1">&emsp;
-			        <input type="checkbox" title="แสดงปุ่มยุติการติดตาม" ng-model="u.productSetting.isDisableBtnShow" ng-change="productSetting(u, 5)" ng-show="group1">
+			        <input type="checkbox" title="ควบคุมการปริ้น Notice" ng-model="u.productSetting.isDisableNoticePrint" ng-change="productSetting(u, 1)" ng-show="group1_1">&emsp;
+			        <input type="checkbox" title="ปิด comment หน้างาน" ng-model="u.productSetting.isHideComment" ng-change="productSetting(u, 2)" ng-show="group1_1">&emsp;
+			        <input type="checkbox" title="ปิด Dashboard" ng-model="u.productSetting.isHideDashboard" ng-change="productSetting(u, 3)" ng-show="group1_1">&emsp;
+			        <input type="checkbox" title="ปิดระบบแจ้งเตือน" ng-model="u.productSetting.isHideAlert" ng-change="productSetting(u, 4)" ng-show="group1_1">&emsp;
+			        <input type="checkbox" title="แสดงปุ่มยุติการติดตาม" ng-model="u.productSetting.isDisableBtnShow" ng-change="productSetting(u, 5)" ng-show="group1_1">
 				</td>
 			</tr>
 		</tbody>
