--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -189,14 +189,14 @@ fieldset {
 							</div>
 						</fieldset>
 						
-						<fieldset style="margin-top: 15px;" ng-show="group0"> <legend style="color: #337AB7;">LPS Function</legend>
+						<fieldset style="margin-top: 15px;" ng-show="group0 || group5"> <legend style="color: #337AB7;">LPS Function</legend>
 							<div class="form-group" ng-show="group0">
 								<label class="control-label col-md-3" style="color: #337AB7;">LPS Fields: </label>
 								<div class="col-md-6">
 									<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-text="lpsField">{{ lpsField || 'คลิกเพื่อแก้ใข' }}</a>
 								</div>
 							</div>
-							<div class="form-group" ng-show="group0">
+							<div class="form-group">
 								<label class="control-label col-md-3" style="color: #337AB7;">LPS Tel: </label>
 								<div class="col-md-6">
 									<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-text="lpsTel">{{ lpsTel || 'คลิกเพื่อแก้ใข' }}</a>
