--- a/backend/src/main/webapp/app/views/lps/detail.html
+++ b/backend/src/main/webapp/app/views/lps/detail.html
@@ -2,7 +2,7 @@
 	<table style="width: 100%; border-collapse: collapse;">
 		<tr ng-repeat="f in fields" style="vertical-align: top;" ng-style="$index < 2 ? {'font-weight':'bold'} : {'font-size':'16px'}" ng-show="mapping[f]">
 			<td style="width: 1%; text-align: right; white-space:nowrap;">{{ f }} :&nbsp;</td>
-			<td>{{ detail[mapping[f]] }}</td>
+			<td>{{ detail[mapping[f]] || '-' }}</td>
 		</tr>
 		<tr style="font-size: 16px;">
 			<td style="text-align: right;">Port :&nbsp;</td>
