--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -51,7 +51,7 @@
 		            </div>
 		        </div>
 		    </div>
-		    <div class="col-xs-6" ng-show="!group6">
+		    <div class="col-xs-6">
 		        <div class="panel panel-primary">
 		            <div class="panel-heading">ข้อมูลการชำระ
 			            <div class="row form-inline">
