--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -40,7 +40,7 @@
 				  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 		   		  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 				  
-				  <div class="pull-right" ng-show="group2 || group5">
+				  <div class="pull-right">
 				  	  <div class="dropdown pull-right">
 					      <button class="btn btn-outline btn-primary" type="button" ng-click="exportResult()">
 					        <i class="fa fa-download"></i> Export
