--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -1,22 +1,41 @@
 <div>
 	<div class="row">
-		<div class="col-lg-12">
-			<h1 class="page-header">Order</h1>
+		<div class="col-xs-12">
+			<h1 class="page-header">ข้อมูลการซื้อ</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-xs-12">
             <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <!-- <i class="fa fa-users fa-fw"></i>  -->Order Info.
-                </div>
                 <div class="panel-body">
-                	
-                	
-                	testing
+                	<div class="row">
+						<div class="col-xs-4" style="min-width: 300px;">
+							<div class="panel panel-default">
+				                <div class="panel-body">
+				                	<div class="form-group input-group">
+									  	<span class="input-group-addon">งวดที่</span>
+									  	<select style="width: 150px;" name="column" class="form-control" ng-model="formData.period" ng-options="option.id as option.name for option in periods" ng-change="searchBtn()">
+								  		</select>
+										<button type="button" style="margin-left: 5px;" class="btn btn-warning btn-circle" ng-click="addPeriod()"><i class="fa fa-plus"></i></button>
+									</div>
+				                	
+				                	
+				                	
+				                	
+				                </div>
+				            </div>
+						</div>
 					
-					
+						<div class="col-xs-8">
+							<div class="panel panel-default">
+				                <div class="panel-body">
+									Detail
+				                	
+				                </div>
+				            </div>
+						</div>
+                	</div>					
                 </div>
                 <div class="panel-footer"></div>
             </div>
