--- a/backend/src/main/webapp/app/views/order/addPeriod.html
+++ b/backend/src/main/webapp/app/views/order/addPeriod.html
@@ -1,5 +1,7 @@
 <form role="form">
    <div class="form-group">
-       <input class="form-control">
+       <input name="period" type='text' class="form-control input-sm dtPicker" 
+       style="width: 130px; style="font-size: 0.9em;" ng-model="formData.addPeriod"
+       placeholder="วันที่เริ่มต้น" date-parser="dd/MM/yyyy HH:mm" />
    </div>
 </form>
