--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -13,16 +13,30 @@
 						<div class="col-xs-4" style="min-width: 300px;">
 							<div class="panel panel-default">
 				                <div class="panel-body">
-				                	<div class="form-group input-group">
-									  	<span class="input-group-addon">งวดที่</span>
-									  	<select style="width: 150px;" name="column" class="form-control" ng-model="formData.period" ng-options="option.id as option.name for option in periods" ng-change="searchBtn()">
+				                
+									<div class="form-group input-group">
+										<span class="input-group-addon">งวดที่</span>
+								      <select name="column" class="form-control" ng-model="formData.period" ng-options="option.id as option.name for option in periods" ng-change="searchBtn()">
 								  		</select>
-										<button type="button" style="margin-left: 5px;" class="btn btn-warning btn-circle" ng-click="addPeriod()"><i class="fa fa-plus"></i></button>
-									</div>
-				                	
-				                	
-				                	
-				                	
+								      <div class="input-group-btn">
+								        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="height: 34px;">ค้นหา <span class="caret"></span></button>
+								        <ul class="dropdown-menu dropdown-menu-right">
+								          <li><a href="">ค้นหา</a></li>
+								          <li><a href="">เพิ่ม</a></li>
+								          <li><a href="">แก้ใข</a></li>
+								          <li><a href="">ลบ</a></li>
+								        </ul>
+								      </div>
+								    </div>
+									
+				                	<div class="form-group input-group">				                	
+					                	<input name="period" type='text' class="form-control dtPicker" 
+									       style="font-size: 0.9em;" ng-model="formData.addPeriod" date-parser="dd/MM/yyyy" />
+									  	<span class="input-group-addon" title="บันทึก" style="cursor: pointer;">
+									  		<i class="fa fa-floppy-o"></i>
+									  	</span>
+				                	</div>
+									
 				                </div>
 				            </div>
 						</div>
@@ -31,6 +45,10 @@
 							<div class="panel panel-default">
 				                <div class="panel-body">
 									Detail
+									
+									
+									
+								       
 				                	
 				                </div>
 				            </div>
