--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -1,3 +1,11 @@
+<style>
+.order-form input::-webkit-outer-spin-button,
+.order-form input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+</style>
+
 <div>
 	<div class="row">
 		<div class="col-xs-12">
@@ -33,6 +41,61 @@
 									  		<i class="fa fa-floppy-o"></i>
 									  	</span>
 				                	</div>
+				                	
+				                	
+				                	<hr />
+				                	
+				                	
+									<form class="form-horizontal order-form">
+										<div class="form-group">
+											<label class="col-xs-3 control-label input-sm">ชื่อ</label>
+										    <div class="col-xs-9">
+										    	<input type="text" tabindex="1" class="form-control input-sm" placeholder="ชื่อผู้ซื้อ" ng-model="formData.name" ng-focus="formData.name = null">
+										    </div>
+										</div>
+										<div class="form-group">
+										    <label class="col-xs-3 control-label input-sm">เลขที่ซื้อ</label>
+										    <div class="col-xs-9">
+												<input type="number" tabindex="2" class="form-control input-sm" placeholder="เลขที่ซื้อ" ng-model="formData.orderNumber" ng-keyup="chkOrderNumber()">
+										    </div>
+										</div>
+										<div class="form-group" ng-show="orderNumStr.length == 2 || orderNumStr.length == 3">
+										    <label class="col-xs-3 control-label input-sm">บน</label>
+										    <div class="col-xs-9">
+												<div class="input-group">
+													<input type="number" tabindex="3" class="form-control input-sm" placeholder="จำนวนเงินที่ซื้อ" ng-model="formData.bon">
+												    <span class="input-group-addon">
+												        <input type="checkbox" title="กลับทุกตำแหน่ง" ng-model="formData.bonSw">
+												    </span>
+												</div>
+										    </div>
+										</div>
+										<div class="form-group" ng-show="orderNumStr.length == 2">
+										    <label class="col-xs-3 control-label input-sm">ล่าง</label>
+										    <div class="col-xs-9">
+												<div class="input-group">
+													<input type="number" tabindex="4" class="form-control input-sm" placeholder="จำนวนเงินที่ซื้อ" ng-model="formData.lang">
+												    <span class="input-group-addon">
+												        <input type="checkbox" title="กลับทุกตำแหน่ง" ng-model="formData.langSw">
+												    </span>
+												</div>
+										    </div>
+										</div>
+										<div class="form-group" ng-show="orderNumStr.length == 3">
+										    <label class="col-xs-3 control-label input-sm">โต๊ด</label>
+										    <div class="col-xs-9">
+												<input type="number" tabindex="5" class="form-control input-sm" placeholder="จำนวนเงินที่ซื้อ" ng-model="formData.tod">
+										    </div>
+										</div>
+										<div class="form-group" ng-show="orderNumStr.length > 0">
+										    <label class="col-xs-3 control-label input-sm">ลอย</label>
+										    <div class="col-xs-9">
+												<input type="number" tabindex="6" class="form-control input-sm" placeholder="จำนวนเงินที่ซื้อ" ng-model="formData.loy">
+										    </div>
+										</div>
+										
+										<button type="button" tabindex="6" class="btn btn-primary pull-right" ng-click="saveOrder()">บันทึก</button>
+									</form>
 									
 				                </div>
 				            </div>
@@ -41,11 +104,58 @@
 						<div class="col-xs-8">
 							<div class="panel panel-default">
 				                <div class="panel-body">
-									Detail
 									
 									
 									
-								       
+									
+									<ul class="nav nav-tabs">
+					                     <li ng-class="{'active': tabActived == 1}" ng-click="tabActived = 1"><a href="" data-toggle="tab">3 ตัวบน</a>
+					                     </li>
+					                     <li ng-class="{'active': tabActived == 2}" ng-click="tabActived = 2"><a href="" data-toggle="tab">2 ตัวบน</a>
+					                     </li>
+					                     <li ng-class="{'active': tabActived == 3}" ng-click="tabActived = 3"><a href="" data-toggle="tab">2 ตัวล่าง</a>
+					                     </li>
+					                     <li ng-class="{'active': tabActived == 4}" ng-click="tabActived = 4"><a href="" data-toggle="tab">ลอย</a>
+					                     </li>
+					                     <li ng-class="{'active': tabActived == 5}" ng-click="tabActived = 5"><a href="" data-toggle="tab">โต๊ด</a>
+					                     </li>
+					                 </ul>
+									
+									<div class="tab-content">
+					                     <div class="tab-pane fade" id="home-pills" ng-class="{'active in': tabActived == 1}">
+					                         <div>
+					                             <br />
+						                         <table class="table table-hover">
+													<thead>
+														<tr>
+															<td>#</td>
+															<td>วันที่</td>
+															<td>ชื่อผู้ซื้อ</td>
+															<td>เลขที่ซื้อ</td>
+															<td>ราคา</td>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>V1</td>
+															<td>V2</td>
+															<td>V3</td>
+															<td>V4</td>
+															<td>V5</td>
+														</tr>
+													</tbody>
+												</table>
+					                         </div>
+					                     </div>
+					                     <div class="tab-pane fade" id="profile-pills" ng-class="{'active in': tabActived == 2}">
+					                         <div>
+						                         <h4>Coming soon</h4>
+					                         </div>
+					                     </div>
+					                 </div>
+									
+									
+									
 				                	
 				                </div>
 				            </div>
